Fixed a visual error in trending box
Account name and profile picture didn't line up properly so I used flexbox to solve it

--- a/styles.css
+++ b/styles.css
@@ -232,6 +232,8 @@ ul {
 }
 
 .trending-item {
+    display: flex;
+    align-items: center;
     position: relative;
     margin-bottom: 8px;
 }
